--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^5.0.0",
+    "figlet": "^1.5.2",
     "readline-sync": "^1.4.10"
   }
 }
